# Strike-mq

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
benchmarks/: latency_bench.cpp
config/: strikemq.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  PRODUCT.md  benchmark-post.md  blogpost.md  demo.tape
include/core/: types.h
include/http/: http_server.h
include/network/: io_uring_defs.h  tcp_server.h
include/protocol/: kafka_codec.h
include/storage/: consumer_group.h  partition_log.h  sharded_log_map.h
include/utils/: circular_buffer.h  endian.h  memory_pool.h  ring_buffer.h
src/: main.cpp
src/core/: broker.cpp
src/http/: http_server.cpp
src/network/: dpdk_engine.cpp  tcp_server.cpp
src/protocol/: kafka_codec.cpp
tests/: circular_buffer_test.cpp  kafka_codec_test.cpp  memory_pool_test.cpp  ring_buffer_test.cpp  sharded_log_map_test.cpp
